@startuml
class entidades.Produto {
- Integer idProduto
- String nomeProduto
- Double precoProduto
+ Integer getIdProduto()
+ void setIdProduto(Integer)
+ String getNomeProduto()
+ void setNomeProduto(String)
+ Double getPrecoProduto()
+ void setPrecoProduto(Double)
}
class View.FuncionarioView {
- javax.swing.JButton alterarFuncionario
- javax.swing.JButton apagaCampos
- javax.swing.JButton buscarFiltro
- javax.swing.JButton cadastrarFuncionario
- javax.swing.JComboBox<String> combo
- javax.swing.JButton excluirFuncionario
- javax.swing.JLabel jLabel1
- javax.swing.JLabel jLabel2
- javax.swing.JLabel jLabel3
- javax.swing.JLabel jLabel4
- javax.swing.JLabel jLabel5
- javax.swing.JLabel jLabel6
- javax.swing.JLabel jLabel7
- javax.swing.JLabel jLabel8
- javax.swing.JScrollPane jScrollPane1
- javax.swing.JScrollPane jScrollPane2
- javax.swing.JTable jTable1
- javax.swing.JTable tabelaFuncionario
- javax.swing.JTextField txtCPF
- javax.swing.JTextField txtEmail
- javax.swing.JTextField txtEndereco
- javax.swing.JTextField txtFiltro
- javax.swing.JTextField txtId
- javax.swing.JTextField txtNascimento
- javax.swing.JTextField txtNome
- javax.swing.JTextField txtSalario
- javax.swing.JTextField txtTelefone
- void initComponents()
- void alterarFuncionarioActionPerformed(java.awt.event.ActionEvent)
- void tabelaFuncionarioMouseClicked(java.awt.event.MouseEvent)
- void txtIdActionPerformed(java.awt.event.ActionEvent)
- void apagaCamposActionPerformed(java.awt.event.ActionEvent)
- void excluirFuncionarioActionPerformed(java.awt.event.ActionEvent)
- void buscarFiltroActionPerformed(java.awt.event.ActionEvent)
- void txtNomeActionPerformed(java.awt.event.ActionEvent)
- void txtCPFActionPerformed(java.awt.event.ActionEvent)
- void txtEnderecoActionPerformed(java.awt.event.ActionEvent)
- void cadastrarFuncionarioActionPerformed(java.awt.event.ActionEvent)
- void consultarFuncionarioActionPerformed(java.awt.event.ActionEvent)
- void idActionPerformed(java.awt.event.ActionEvent)
+ {static} void main(String[])
- void listarValores()
- void listarValoresFiltro()
- void cadastrarFuncionario()
- void AlterarFuncionario()
- void CarregarFuncionario()
+ void apagaCampos()
- void deletarFuncionario()
}
class conexaoDB.AnimalDB {
+ List<Animal> selectAnimal()
+ List<Animal> selectAnimal(String)
+ void insertAnimal(Animal)
+ void updateAnimal(Animal)
+ void deleteAnimal(Integer)
}
class conexaoDB.ClienteDB {
+ List<Cliente> selectCliente()
+ List<Cliente> selectCliente(String)
+ void insertCliente(Cliente)
+ void updateCliente(Cliente)
+ void deleteCliente(Integer)
}
class conexaoDB.FuncionarioDB {
+ List<Funcionario> selectFuncionario()
+ List<Funcionario> selectFuncionario(String)
+ void insertFuncionario(Funcionario)
+ void updateFuncionario(Funcionario)
+ void deleteFuncionario(Funcionario)
}
class conexaoDB.AgendamentoDB {
+ List<Agendamento> selectAgendamento()
+ List<Agendamento> selectAgendamento(String)
+ void insertAgendamento(Agendamento)
+ void updateAgendamento(Agendamento)
+ void deleteAgendamento(Integer)
}
class entidades.Funcionario {
- Integer idFuncionario
- String nomeFuncionario
- String cpfFuncionario
- Date nascimentoFuncionario
- String emailFuncionario
- Float salarioFuncionario
- String telefoneFuncionario
- String enderecoFuncionario
+ Integer getIdFuncionario()
+ void setIdFuncionario(Integer)
+ String getCpfFuncionario()
+ void setCpfFuncionario(String)
+ String getNomeFuncionario()
+ void setNomeFuncionario(String)
+ Date getNascimentoFuncionario()
+ void setNascimentoFuncionario(Date)
+ String getEmailFuncionario()
+ void setEmailFuncionario(String)
+ Float getSalarioFuncionario()
+ void setSalarioFuncionario(Float)
+ String getEnderecoFuncionario()
+ void setEnderecoFuncionario(String)
+ String getTelefoneFuncionario()
+ void setTelefoneFuncionario(String)
}
class View.AnimalView {
- javax.swing.JButton cadastrarAnimal
- javax.swing.JLabel jLabel1
- javax.swing.JLabel jLabel2
- javax.swing.JLabel jLabel3
- javax.swing.JLabel jLabel4
- javax.swing.JLabel jLabel5
- javax.swing.JLabel jLabel6
- javax.swing.JScrollPane jScrollPane1
- javax.swing.JScrollPane jScrollPane2
- javax.swing.JTable jTable1
- javax.swing.JTable tabelaAnimal
- javax.swing.JTextField txtCor
- javax.swing.JTextField txtEspecie
- javax.swing.JTextField txtNascimento
- javax.swing.JTextField txtNome
- javax.swing.JTextField txtRaca
- javax.swing.JComboBox<String> txtSexo
- void initComponents()
- void txtSexoActionPerformed(java.awt.event.ActionEvent)
- void cadastrarAnimalActionPerformed(java.awt.event.ActionEvent)
+ {static} void main(String[])
- void listarValores()
+ void cadastrarAnimal()
}
class entidades.AnimalCliente {
~ Integer idAnimalCliente
+ Integer getIdAnimalCliente()
+ void setIdAnimalCliente(Integer)
+ Integer getIdAnimal()
+ void setIdAnimal(Integer)
+ Integer getIdCliente()
+ void setIdCliente(Integer)
}
class conexaoDB.VendaDB {
+ List<Venda> selectVenda()
+ List<Venda> selectVenda(String)
+ void insertVenda(Venda)
+ void updateVenda(Venda)
+ void deleteVenda(Integer)
}
class conexaoDB.ProdutoDB {
+ List<Produto> selectProduto()
+ List<Produto> selectProduto(String)
+ void insertProduto(Produto)
+ void updateProduto(Produto)
+ void deleteProduto(Produto)
}
class conexaoDB.ConexaoDB {
# Connection connect
# Statement statement
# PreparedStatement preparedStatement
# ResultSet resultSet
+ void conectar()
+ String dateToDatetime(Date)
# void close()
}
class entidades.Cliente {
- Integer idCliente
- String cpfCliente
- String nomeCliente
- Date nascimentoCliente
- String emailCliente
- String telefoneCliente
- String enderecoCliente
+ Integer getIdCliente()
+ void setIdCliente(Integer)
+ String getCpfCliente()
+ void setCpfCliente(String)
+ String getNomeCliente()
+ void setNomeCliente(String)
+ Date getNascimentoCliente()
+ void setNascimentoCliente(Date)
+ String getEmailCliente()
+ void setEmailCliente(String)
+ String getTelefoneCliente()
+ void setTelefoneCliente(String)
+ String getEnderecoCliente()
+ void setEnderecoCliente(String)
}
class conexaoDB.ServicoDB {
+ List<Servico> selectServico()
+ List<Servico> selectServico(String)
+ void insertServico(Servico)
+ void updateServico(Servico)
+ void deleteServico(Integer)
}
class entidades.Agendamento {
~ Integer idAgendamento
~ Integer idAnimal
~ Integer idFuncionario
~ Integer idServico
~ Date dataAgendamento
~ String situacaoAgendamento
+ Integer getIdAgendamento()
+ void setIdAgendamento(Integer)
+ Integer getIdAnimal()
+ void setIdAnimal(Integer)
+ Integer getIdFuncionario()
+ void setIdFuncionario(Integer)
+ Integer getIdServico()
+ void setIdServico(Integer)
+ Date getDataAgendamento()
+ void setDataAgendamento(Date)
+ String getSituacaoAgendamento()
+ void setSituacaoAgendamento(String)
}
class entidades.Servico {
~ Integer idServico
~ String tipoServico
~ String descricaoServico
~ Double precoServico
+ Integer getIdServico()
+ void setIdServico(Integer)
+ String getTipoServico()
+ void setTipoServico(String)
+ String getDescricaoServico()
+ void setDescricaoServico(String)
+ Double getPrecoServico()
+ void setPrecoServico(Double)
}
class clinica_veterinaria.Clinica_veterinaria {
+ {static} void main(String[])
}
class View.ProdutoView {
- javax.swing.JButton alterarProduto
- javax.swing.JButton apagarCampos
- javax.swing.JButton buscarFiltro
- javax.swing.JButton cadastrarProduto
- javax.swing.JComboBox<String> combo
- javax.swing.JButton excluirProduto
- javax.swing.JLabel jLabel1
- javax.swing.JLabel jLabel2
- javax.swing.JLabel jLabel3
- javax.swing.JScrollPane jScrollPane1
- javax.swing.JTable tabelaProduto
- javax.swing.JTextField txtFiltro
- javax.swing.JTextField txtId
- javax.swing.JTextField txtNome
- javax.swing.JTextField txtPreco
- void initComponents()
- void txtIdActionPerformed(java.awt.event.ActionEvent)
- void cadastrarProdutoActionPerformed(java.awt.event.ActionEvent)
- void tabelaProdutoMouseClicked(java.awt.event.MouseEvent)
- void excluirProdutoActionPerformed(java.awt.event.ActionEvent)
- void apagarCamposActionPerformed(java.awt.event.ActionEvent)
- void alterarProdutoActionPerformed(java.awt.event.ActionEvent)
- void buscarFiltroActionPerformed(java.awt.event.ActionEvent)
- void comboActionPerformed(java.awt.event.ActionEvent)
+ {static} void main(String[])
- void inserirProduto()
- void listarValores()
- void listarValoresFiltro()
- void CarregarProduto()
- void deletarProduto()
+ void apagaCampos()
- void AlterarProduto()
}
class entidades.Venda {
~ ClienteDB clienteDB
~ FuncionarioDB funcionarioDB
~ ProdutoDB produtoDB
~ ConexaoDB mysql
~ Integer idVenda
~ int idProduto
~ Produto produtoVenda
~ Cliente clienteVenda
~ Funcionario funcionarioVenda
~ Date dataVenda
~ Integer quantidadeProduto
~ Double valorVenda
+ Integer getIdVenda()
+ void setIdVenda(Integer)
+ int getIdProduto()
+ void setIdProduto(int)
+ int getIdCliente()
+ void setIdCliente(int)
+ int getIdFuncionario()
+ void setIdFuncionario(int)
+ Produto getProdutoVenda()
+ void setProdutoVenda(Produto)
+ Cliente getClienteVenda()
+ void setClienteVenda(Cliente)
+ Funcionario getFuncionarioVenda()
+ void setFuncionarioVenda(Funcionario)
+ Date getDataVenda()
+ void setDataVenda(Date)
+ Integer getQuantidadeProduto()
+ void setQuantidadeProduto(Integer)
+ Double getValorVenda()
+ void setValorVenda(Double)
}
class entidades.Animal {
- Integer idAnimal
- String nomeAnimal
- String racaAnimal
- Date nascimentoAnimal
- String especieAnimal
- String sexoAnimal
- String corAnimal
+ Integer getIdAnimal()
+ void setIdAnimal(Integer)
+ String getNomeAnimal()
+ void setNomeAnimal(String)
+ String getRacaAnimal()
+ void setRacaAnimal(String)
+ Date getNascimentoAnimal()
+ void setNascimentoAnimal(Date)
+ String getEspecieAnimal()
+ void setEspecieAnimal(String)
+ String getSexoAnimal()
+ void setSexoAnimal(String)
+ String getCorAnimal()
+ void setCorAnimal(String)
}
class conexaoDB.AnimalClienteDB {
+ List<AnimalCliente> selectAnimalCliente()
+ List<AnimalCliente> selectAnimalCliente(String)
+ void insertAnimalCliente(int,int)
+ void updateAnimalCliente(AnimalCliente)
+ void deleteAnimalCliente(Integer)
}


View.JFrame <|-- View.FuncionarioView
conexaoDB.ConexaoDB <|-- conexaoDB.AnimalDB
conexaoDB.ConexaoDB <|-- conexaoDB.ClienteDB
conexaoDB.ConexaoDB <|-- conexaoDB.FuncionarioDB
conexaoDB.ConexaoDB <|-- conexaoDB.AgendamentoDB
View.JFrame <|-- View.AnimalView
conexaoDB.ConexaoDB <|-- conexaoDB.VendaDB
conexaoDB.ConexaoDB <|-- conexaoDB.ProdutoDB
conexaoDB.ConexaoDB <|-- conexaoDB.ServicoDB
View.JFrame <|-- View.ProdutoView
conexaoDB.ConexaoDB <|-- conexaoDB.AnimalClienteDB
@enduml